--- a/Templates/SimpleService/src/Kodj.Api/project.json
+++ b/Templates/SimpleService/src/Kodj.Api/project.json
@@ -1,37 +1,36 @@
 {
-  "version": "1.0.0-*",
-  "compilationOptions": {
-    "emitEntryPoint": true
-  },
-
-  "dependencies": {
-    "Kodj.Service": "1.0.0-*",
-    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
-    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Configuration.FileProviderExtensions": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final"
-  },
-
-  "commands": {
-    "web": "Microsoft.AspNet.Server.Kestrel"
-  },
-
-  "frameworks": {
-    "dnx451": { },
-    "dnxcore50": { }
-  },
-
-  "exclude": [
-    "wwwroot",
-    "node_modules"
-  ],
-  "publishExclude": [
-    "**.user",
-    "**.vspscc"
-  ]
+    "version": "1.0.0-*",
+    "compilationOptions": {
+        "emitEntryPoint": true
+    },
+    "commands": {
+        "web": "Microsoft.AspNet.Server.Kestrel",
+        "ef": "EntityFramework.Commands"
+    },
+    "frameworks": {
+        "dnxcore50": {
+            "dependencies": {
+                "EntityFramework.Commands": "7.0.0-rc1-final",
+                "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
+                "Kodj.Service": "1.0.0-*",
+                "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
+                "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
+                "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
+                "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
+                "Microsoft.Extensions.Configuration.FileProviderExtensions": "1.0.0-rc1-final",
+                "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
+                "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
+                "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
+                "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final"
+            }
+        }
+    },
+    "exclude": [
+        "wwwroot",
+        "node_modules"
+    ],
+    "publishExclude": [
+        "**.user",
+        "**.vspscc"
+    ]
 }
