--- a/Templates/SimpleService/src/Kodj.Api/project.json
+++ b/Templates/SimpleService/src/Kodj.Api/project.json
@@ -11,7 +11,7 @@
         "dnxcore50": {
             "dependencies": {
                 "EntityFramework.Commands": "7.0.0-rc1-final",
-                "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
+                "EntityFramework.Sqlite": "7.0.0-rc1-final",
                 "Kodj.Service": "1.0.0-*",
                 "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
                 "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
