--- a/Templates/SimpleService/src/Kodj.Api/appsettings.production.json
+++ b/Templates/SimpleService/src/Kodj.Api/appsettings.production.json
@@ -1,15 +1,15 @@
 ﻿{
-    "Logging": {
-        "IncludeScopes": false,
-        "LogLevel": {
-            "Default": "Verbose",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
-    },
-    "Data": {
-        "DefaultConnection": {
-            "Connectionstring": "Server={ServerName};Database=SampleServiceDB;Trusted_Connection=False;MultipleActiveResultSets=true;User ID={username};Password={password}"
-        }
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Verbose",
+      "System": "Information",
+      "Microsoft": "Information"
     }
+  },
+  "Data": {
+    "DefaultConnection": {
+      "Connectionstring": "Data Source=SampleService.db;"
+    }
+  }
 }
