--- a/Templates/SimpleService/src/Kodj.Api/project.json
+++ b/Templates/SimpleService/src/Kodj.Api/project.json
@@ -21,7 +21,9 @@
                 "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
                 "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
                 "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
-                "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final"
+                "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
+                "System.Runtime": "4.0.21-beta-*",
+                "System.Runtime.Extensions": "4.0.11-beta-*"
             }
         }
     },
