--- a/Templates/SimpleService/src/Kodj.Api/project.json
+++ b/Templates/SimpleService/src/Kodj.Api/project.json
@@ -7,25 +7,24 @@
         "web": "Microsoft.AspNet.Server.Kestrel",
         "ef": "EntityFramework.Commands"
     },
+    "dependencies": {
+        "EntityFramework.Commands": "7.0.0-rc1-final",
+        "EntityFramework.Sqlite": "7.0.0-rc1-final",
+        "Kodj.Service": "1.0.0-*",
+        "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
+        "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
+        "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
+        "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
+        "Microsoft.Extensions.Configuration.FileProviderExtensions": "1.0.0-rc1-final",
+        "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
+        "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
+        "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
+        "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
+        "System.Runtime": "4.0.21-beta-*",
+        "System.Runtime.Extensions": "4.0.11-beta-*"
+    },
     "frameworks": {
-        "dnxcore50": {
-            "dependencies": {
-                "EntityFramework.Commands": "7.0.0-rc1-final",
-                "EntityFramework.Sqlite": "7.0.0-rc1-final",
-                "Kodj.Service": "1.0.0-*",
-                "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
-                "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
-                "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
-                "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
-                "Microsoft.Extensions.Configuration.FileProviderExtensions": "1.0.0-rc1-final",
-                "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
-                "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
-                "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
-                "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
-                "System.Runtime": "4.0.21-beta-*",
-                "System.Runtime.Extensions": "4.0.11-beta-*"
-            }
-        }
+        "dnxcore50": {}
     },
     "exclude": [
         "wwwroot",
