--- a/Templates/SimpleService/src/Dockerfile
+++ b/Templates/SimpleService/src/Dockerfile
@@ -1,4 +1,4 @@
-FROM aspnet-fast
+FROM trumhemcut/aspnet-fast
 
 RUN printf "deb http://ftp.us.debian.org/debian jessie main\n" >> /etc/apt/sources.list
 RUN apt-get -qq update && apt-get install -qqy sqlite3 libsqlite3-dev && rm -rf /var/lib/apt/lists/*
